style.css
/* 
font-family: 'Bebas Neue', cursive;    👉 nav , some buttons
font-family: 'Montserrat', sans-serif; 👉 p [with 2 weights 400,700 (regular,bold)]
font-family: 'Alfa Slab One', cursive; 👉 H1,H2..
*/

/* 
    🌳🌳 Start genral reset  🌳🌳
*/

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

ul,
li {
  list-style-type: none;
}

a {
  text-decoration: none;
}

/*⛔⛔ End genral reset ⛔⛔*/

/* 
    🌳🌳 Start Header  🌳🌳 
*/

header {
  font-family: "Bebas Neue", cursive;
  height: 750px;
  background-image: url("./assets/images/header/pattern.jpg");
  color: #42200b;
}

header .wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 50px 50px 10px 50px;
}

header .contact {
  position: relative;
  font-family: "Montserrat", sans-serif;
  font-weight: bold;
  font-size: 16px;
}

header .contact::before {
  content: url(./assets/images/header/moto.png);
  position: absolute;
  left: -50px;
  top: -10px;
}
header nav {
  padding-right: 50px;
}
header nav ul {
  display: flex;
  justify-content: flex-end;
}
header nav ul li {
  margin: 0 20px;
}
header nav ul li:last-child {
  margin-right: 0;
  color: red;
}
header nav li a {
  color: #42200b;
  font-size: 22px;
  letter-spacing: 4px;
}

header .hero {
  margin: 50px;
  display: flex;
  justify-content: space-between;
  position: relative;
}

header .caption p:first-child {
  border: 2px dashed #42200b;
  padding: 10px;
  font-size: 24px;
  font-weight: 400;
  color: #42200b;
  display: inline-block;
}
header .caption p:last-child {
  font-family: "Alfa Slab One", cursive;
  font-size: 50px;
  color: #42200b;
  text-shadow: 3px 3px #fff;
}
header .caption p:last-child span {
  font-family: "Alfa Slab One", cursive;
  font-size: 110px;
  color: #42200b;
  text-shadow: 3px 3px #fff;
}

header .hero .imgs {
  position: relative;
  width: 600px;
  height: 510px;
  overflow: hidden;
}
header .hero .imgs img {
  position: absolute;
  bottom: 0;
  right: 20px;
}
header .hero .imgs .burger {
  width: 480px;
}
header .hero .imgs .drink {
  width: 350px;
  right: -80px;
  bottom: 5px;
}
header .hero .imgs .potato {
  width: 300px;
  right: 255px;
  bottom: 120px;
}

header .discount {
  position: absolute;
  background: #df1b1c;
  color: white;
  border: 3px dashed white;
  width: 150px;
  height: 150px;
  right: 400px;
  bottom: 25px;
  border-radius: 75px;
  box-shadow: 0px 0px 0px 10px #df1b1c;
  font-size: 60px;
  font-family: "Bebas Neue", cursive;
}
header .discount span {
  font-size: 30px;
}
header .discount span:last-child {
  display: flex;
  justify-content: center;
  line-height: 25px;
  font-size: 40px;
  letter-spacing: 5px;
}

/*⛔⛔ End Header ⛔⛔*/

/* 
🌳🌳 Start Section Try Today  🌳🌳 
*/

.try-today {
  width: 90%;
  margin: 100px auto;
  display: flex;
  justify-content: space-between;
}
.try-today .card-container {
  width: 48%;
  position: relative;
  text-transform: uppercase;
  font-family: "Bebas Neue", cursive;
  color: white;
}
.try-today .card-container > div {
  position: relative;
}
.try-today .card-container:last-child {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}
.try-today .card-container img {
  width: 100%;
}
.try-today .card-container .label {
  position: absolute;
  top: 20px;
  left: 20px;
}
.try-today .card-container .caption {
  position: absolute;
  top: 45px;
  left: 20px;
  margin-top: 5px;
  font-size: 40px;
  line-height: 35px;
}
/*⛔⛔ End Section Try Today  ⛔⛔*/

/* 
🌳🌳 Start Section Menu  🌳🌳 
*/

.menu .wrapper {
  width: 80%;
  margin: 0 auto;
  text-align: center;
}
.menu .wrapper button {
  background: #ffc236;
  color: #3d2514;
  border: none;
  font-family: "Bebas Neue", cursive;
  font-size: 24px;
  text-transform: uppercase;
  padding: 7px 20px;
  margin-bottom: 30px;
}
.menu .wrapper h2 {
  color: #3d2514;
  font-family: "Alfa Slab One", cursive;
  font-size: 50px;
  text-transform: uppercase;
}
.menu .wrapper p {
  color: #3d2514;
  font-family: "Montserrat", sans-serif;
  font-size: 16px;
  margin-bottom: 50px;
}

.menu .products {
  width: 90%;
  margin: 0 auto;
  display: flex;
  justify-content: space-between;
}
.menu .card img {
  width: 100%;
}
.menu .card {
  display: flex;
  flex-direction: column;
  text-align: center;
  align-items: center;
  width: calc(80% / 3);
}
.menu .card .prod-name {
  font-family: "Bebas Neue", cursive;
  text-transform: uppercase;
  font-size: 30px;
  color: #3d2514;
}
.menu .card .caption {
  font-family: "Montserrat", sans-serif;
  font-size: 16px;
  color: #3d2514;
  margin: 20px 0;
}
.menu .card button {
  background: #df1b1c;
  border: none;
  font-family: "Alfa Slab One", cursive;
  font-size: 18px;
  text-transform: uppercase;
  color: white;
  width: 200px;
  padding: 15px;
}

/*⛔⛔ End Menu ⛔⛔*/

/* 
🌳🌳 Start Slider  🌳🌳 
*/
.slider {
  margin: 30px 0;
  height: 530px;
}

.slider .swiper-container {
  width: 94%;
  margin: 0 auto !important;
  box-shadow: 19px 11px 30px 6px rgba(50, 50, 50, 0.4);
}
.slider {
  margin: 100px 0;
}
.slider .swiper-slide {
  height: 455px;
}
.slider .content {
  display: flex;
  justify-content: space-between;
  padding: 20px;
  height: 500px;
}
.slider .content .caption {
  width: 50%;
  padding: 10px;
}
.slider .caption h2 {
  color: #3d2514;
  font-family: "Alfa Slab One", cursive;
  font-size: 40px;
  text-transform: uppercase;
  margin-bottom: 20px;
}
.slider .caption p {
  font-family: "Montserrat", sans-serif;
  line-height: 40px;
}
.slider .caption h2 span {
  display: block;
  color: #252424;
  font-family: "Bebas Neue", cursive;
  font-size: 25px;
  text-transform: uppercase;
  letter-spacing: 5px;
}
.slider .content .img {
  width: 50%;
}
.slider .content .img img {
  width: 100%;
}

/* pagination */

.swiper-container-horizontal > .swiper-pagination-bullets,
.swiper-pagination-custom,
.swiper-pagination-fraction {
  bottom: 50px;
  left: -500px;
}

.swiper-pagination-bullet-active {
  opacity: 1;
  background: orange;
}

.swiper-pagination-bullet {
  width: 17px;
  height: 17px;
}
/*⛔⛔ End Slider ⛔⛔*/

/* 
🌳🌳 Start Slider  🌳🌳 
*/
.booking {
  margin-bottom: 135px;
}
.booking p,
.booking h2 {
  text-align: center;
}
.booking p {
  color: #3d2514;
  font-family: "Bebas Neue", cursive;
  font-size: 30px;
  letter-spacing: 2px;
}
.booking h2 {
  color: #3d2514;
  font-family: "Alfa Slab One", cursive;
  text-transform: uppercase;
  font-size: 50px;
  letter-spacing: 5px;
  margin-bottom: 50px;
  position: relative;
}
.booking form {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
  width: 750px;
  margin: 0 auto;
  position: relative;
}
.booking form input {
  width: 350px;
  height: 60px;
  margin: 10px;
  padding: 10px 30px;
  border-radius: 5px;
  border: 1px solid rgba(128, 128, 128, 0.74);
}
.booking form button {
  width: 350px;
  height: 60px;
  margin: 10px;
  padding: 10px 30px;
  border-radius: 5px;
  font-family: "Alfa Slab One", cursive;
  font-size: 20px;
  background: #df1b1c;
  color: white;
  border: none;
}

form::before {
  content: url(./assets/images/form/Burger.png);
  position: absolute;
  left: -360px;
  top: -270px;
}
form::after {
  content: url(./assets/images/form/Image.png);
  position: absolute;
  transform: scale(0.9);
  right: -337px;
  top: -71px;
}
.booking h2::before {
  content: url(./assets/images/form/Bottle.png);
  position: absolute;
  left: 100px;
  top: 0;
}

/*⛔⛔ End Booking ⛔⛔*/

/* 
🌳🌳 Start Footer  🌳🌳 
*/

footer {
  color: white;
}

footer .wrapper {
  background: url(./assets/images/footer/Layer.jpg);
  width: 94%;
  margin: 0 auto;
  height: 500px;
  padding: 60px 30px 30px 30px;
}
footer .wrapper img {
  height: 75px;
  margin-bottom: 30px;
}
footer .sub-wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
  margin-bottom: 150px;
}
footer .sub-wrapper > * {
  width: 450px;
}
footer .sub-wrapper p {
  font-family: "Montserrat", sans-serif;
  font-size: 14px;
  line-height: 30px;
}

footer .contact p {
  font-family: "Bebas Neue", cursive;
  text-transform: uppercase;
  font-size: 20px;
}
footer .contact .location::before {
  content: url(./assets/images/footer/location.png);
  display: inline-block;
  margin-right: 20px;
}
footer .contact .email::before {
  content: url(./assets/images/footer/email.png);
  display: inline-block;
  margin-right: 20px;
}

footer .bottom-footer {
  display: flex;
  justify-content: space-between;
  align-items: center;
}
footer .bottom-footer p {
  font-family: "Bebas Neue", cursive;
  text-transform: uppercase;
  margin-top: -20px;
}
footer .bottom-footer .social {
  padding-top: 10px;
}
footer .bottom-footer img {
  height: 29px;
  display: inline-block;
}

/*⛔⛔ End Footer ⛔⛔*/

